# p2nd

./: .gitignore  README.md  cluster_gridsearch.sh  cluster_gridsearch_fail_safe.sh  cluster_gridsearch_mfa.sh  main.py  profile_main_versions.sh  pyproject.toml  result_download.sh  run_main_versions.sh  run_mfa.md  run_v5.md  tar_to_download_profile.sh
scripts/: aggregate_all.py  aggregate_legacy.py  check_correlation.py  check_helix_issue.py  check_pdbredo_legacy.py  check_rama_plot.py  check_result_cluster.py  cluster.py  cluster_mfa.py  cluster_subspace.py  download_pdbredo_legacy.py  download_pdbredo_mmcif.py  filter_pisces.py  filter_transform.py  profile_clusters.py  profile_clusters_basic.py  profile_clusters_basic_mirror_dssp.py  transform.py  transform_base.py  transform_v1.1.py  transform_v1.py  transform_v2.1.py  transform_v2.py  transform_v3.1.py  transform_v3.py  transform_v4.1.py  transform_v4.py  transform_v5.1.py  transform_v5.py  transform_v6.1.py  transform_v6.py  transform_v7.py  transform_vfull.py  verify_agg.py  verify_transform.py
scripts/logs/: download-pc20-legacy.txt  download_results_failed.csv  download_results_pc20.csv
