[project]
name = "p2nd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gemmi>=0.7.3",
    "matplotlib>=3.10.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
